<resources>
    <string name="app_name">步烙</string>
    <string name="app_slogan">健康生活每一天!</string>

    <!--dialog text-->
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancel">取消</string>
    <!--HomePageFragment-->
    <array name="choose_avatar_from_array">
        <item>拍照</item>
        <item>相册</item>
    </array>
    <string name="synchronize_title">正在同步数据...</string>
    <string name="choose_avatar_source_dialog_title">请选择...</string>
    <string name="weather_location_ph">--</string>
    <string name="home_my_activity">我的活动</string>
    <string name="home_total_distance">距离</string>
    <string name="home_duration_time">时长</string>
    <string name="home_running_times">总次数</string>
    <string name="cancel_operate">操作取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--ProfileActivity-->
    <string name="profile_activity_title">个人详情</string>
    <string name="profile_activity_logout_confirm">确定退出?</string>
    <string name="profile_activity_logout_message">退出将清除所有用户数据!</string>

    <!--ChangePasswordActivity-->
    <string name="change_password_activity_current_pwd">原密码</string>
    <string name="change_password_activity_new">新密码</string>
    <string name="change_password_activity_new_confirm">再输入一次新密码</string>
    <string name="change_password_activity_change">提交修改</string>
    <string name="change_password_activity_title">修改密码</string>
    <string name="change_password_activity_code">输入验证码</string>
    <string name="change_password_activity_input_your_password">请输入密码</string>
    <string name="change_password_activity_password_not_null">密码不能为空</string>
    <string name="change_password_activity_password_not_identical">密码不一致</string>

    <!--MainActivity-->
    <string name="exit_activity_warn">再按一次退出应用</string>
    <string name="exit_activity_warning_dialog_title">提示</string>
    <string name="exit_activity_warning_dialog_message">确定退出应用吗?</string>

    <!--activity running record detail-->
    <string name="running_record_detail_title">跑步记录</string>
    <string name="running_record_detail_menu_upload">上传</string>

    <!--activity about-->
    <string name="about_activity_network_error">网络错误</string>
    <string name="about_activity_up_to_date">已是最新版本</string>
    <string name="about_activity_new_version">新版本</string>


    <!--File save info-->
    <string name="save_success">文件已保存</string>
    <string name="external_device_invalid">外存不存在</string>
    <string name="failed_to_save">保存失败</string>

    <!--GPS states-->
    <string name="gps_tracking">GPS定位中</string>
    <string name="gps_tracked">GPS定位成功</string>

    <!--activity publish moment-->
    <string name="publish_moment_activity_title">发表动态</string>

    <!--LoginActivity-->
    <string name="login_activity_title">请登录</string>
    <string name="auto_login_next_time">下次自动登录?</string>
    <string name="login_confirm">登录</string>
    <string name="login_signup">免费注册</string>
    <string name="login_visitor">以后登录</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="login_password_hint">密码</string>
    <string name="login_username_hint">用户名</string>

    <!--AudioListActivity-->
    <string name="audio_list_activity_title">音乐列表</string>

    <!--activity weather detail-->
    <string name="weather_detail_humidity">相对湿度</string>
    <string name="weather_detail_aqi">空气质量指数</string>
    <string name="weather_detail_source">和风天气</string>
    <string name="weather_detail_no_data">暂无数据</string>
    <string name="weather_detail_major_pollutants">主要污染物</string>
    <string name="weather_detail_sport">运动建议</string>
    <string name="weather_detail_uv">紫外线</string>

    <!--PedometerActivity-->
    <string name="pedometer_activity_title">计步器</string>
    <string name="pedometer_activity_today">今天</string>
    <string name="pedometer_activity_daily_target">每日目标:2000</string>
    <string name="pedometer_activity_has_walk">步数</string>
    <string name="pedometer_activity_distance">今日距离:M</string>
    <string name="pedometer_activity_duration">活动时长</string>
    <!--SignupActivity-->
    <string name="signup_activity_title">注册</string>
    <string name="user_agreement">我同意用户协议</string>
    <string name="signup_hint_username">输入用户名</string>
    <string name="signup_hint_password">输入密码</string>
    <string name="signup_hint_password_check">再输入一次密码</string>

    <!--RunningActivity-->
    <string name="running_title">跑步</string>
    <string name="running_duration">总耗时</string>
    <string name="gps_not_ready">GPS定位未成功,想在就开始吗?</string>
    <string name="start_anyway">跑步</string>
    <string name="wait_gps">等待</string>
    <string name="running_distance">总距离:KM</string>
    <string name="running_speed">速度(km/h)</string>
    <string name="running_calories">卡路里(kCal)</string>
    <string name="running_steps">步数</string>
    <string name="running_start">开始</string>
    <string name="running_stop">结束</string>
    <string name="running_continue">继续</string>
    <string name="running_pause">暂停</string>

    <!--fragment personal-->
    <string name="fragment_personal_about">关于</string>
    <string name="fragment_personal_feedback">反馈</string>
    <string name="fragment_personal_settings">设置</string>
    <string name="fragment_personal_account">个人详情</string>

    <!--MorePageFragment-->
    <string name="more_page_fragment_article">跑步小知识</string>
    <string name="more_page_fragment_music">音乐</string>
    <string name="more_page_fragment_chat">更多功能,敬请期待...</string>
    <string name="more_page_fragment_pedometer">计步器</string>

    <!--ArticleActivity-->
    <string name="article_activity_loading_content">玩命加载中......</string>

    <!--activity-->
    <string name="logout">退出登录</string>

    <!--RunningRecordsActivity-->
    <string name="running_records_activity_title">跑步记录</string>

    <!--CalenderView-->
    <string name="calender_view_sun">日</string>
    <string name="calender_view_mon">一</string>
    <string name="calender_view_tue">二</string>
    <string name="calender_view_thu">四</string>
    <string name="calender_view_wed">三</string>
    <string name="calender_view_fri">五</string>
    <string name="calender_view_sat">六</string>

    <!--height array-->
    <array name="height_array">
        <item>130 cm</item>
        <item>135 cm</item>
        <item>140 cm</item>
        <item>141 cm</item>
        <item>142 cm</item>
        <item>143 cm</item>
        <item>144 cm</item>
        <item>145 cm</item>
        <item>146 cm</item>
        <item>147 cm</item>
        <item>148 cm</item>
        <item>149 cm</item>
        <item>150 cm</item>
        <item>151 cm</item>
        <item>152 cm</item>
        <item>153 cm</item>
        <item>154 cm</item>
        <item>155 cm</item>
        <item>156 cm</item>
        <item>157 cm</item>
        <item>158 cm</item>
        <item>159 cm</item>
        <item>160 cm</item>
        <item>160 cm</item>
        <item>160 cm</item>
        <item>160 cm</item>
        <item>161 cm</item>
        <item>162 cm</item>
        <item>163 cm</item>
        <item>164 cm</item>
        <item>165 cm</item>
        <item>166 cm</item>
        <item>167 cm</item>
        <item>168 cm</item>
        <item>169 cm</item>
        <item>170 cm</item>
        <item>171 cm</item>
        <item>172 cm</item>
        <item>173 cm</item>
        <item>174 cm</item>
        <item>175 cm</item>
        <item>176 cm</item>
        <item>177 cm</item>
        <item>178 cm</item>
        <item>179 cm</item>
        <item>180 cm</item>
        <item>181 cm</item>
        <item>182 cm</item>
        <item>183 cm</item>
        <item>184 cm</item>
        <item>185 cm</item>
        <item>186 cm</item>
        <item>187 cm</item>
        <item>188 cm</item>
        <item>189 cm</item>
        <item>190 cm</item>
    </array>
    <!--weight array-->
    <array name="weight_array">
        <item>30 kg</item>
        <item>31 kg</item>
        <item>32 kg</item>
        <item>33 kg</item>
        <item>34 kg</item>
        <item>35 kg</item>
        <item>36 kg</item>
        <item>37 kg</item>
        <item>38 kg</item>
        <item>39 kg</item>
        <item>40 kg</item>
        <item>41 kg</item>
        <item>42 kg</item>
        <item>43 kg</item>
        <item>44 kg</item>
        <item>45 kg</item>
        <item>46 kg</item>
        <item>47 kg</item>
        <item>48 kg</item>
        <item>49 kg</item>
        <item>50 kg</item>
        <item>51 kg</item>
        <item>52 kg</item>
        <item>53 kg</item>
        <item>54 kg</item>
        <item>55 kg</item>
        <item>56 kg</item>
        <item>57 kg</item>
        <item>58 kg</item>
        <item>59 kg</item>
        <item>60 kg</item>
        <item>61 kg</item>
        <item>62 kg</item>
        <item>63 kg</item>
        <item>64 kg</item>
        <item>65 kg</item>
        <item>66 kg</item>
        <item>67 kg</item>
        <item>68 kg</item>
        <item>69 kg</item>
        <item>70 kg</item>
        <item>71 kg</item>
        <item>72 kg</item>
        <item>73 kg</item>
        <item>74 kg</item>
        <item>75 kg</item>
        <item>76 kg</item>
        <item>77 kg</item>
        <item>78 kg</item>
        <item>79 kg</item>
        <item>80 kg</item>
        <item>81 kg</item>
        <item>82 kg</item>
        <item>83 kg</item>
        <item>84 kg</item>
        <item>85 kg</item>
        <item>86 kg</item>
        <item>87 kg</item>
        <item>88 kg</item>
        <item>89 kg</item>
        <item>90 kg</item>
    </array>
    <!--gender array-->
    <array name="gender_array">
        <item>男</item>
        <item>女</item>
    </array>

</resources>
