<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:v7ns = "http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.zmychou.paces.fragments.PersonalPageFragment">


    <ImageView
        android:id="@+id/iv_personal_banner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@mipmap/placeholder"/>
    <com.zmychou.paces.customview.ItemView
        android:layout_marginTop="5dp"
        android:background="@color/colorGrayDark"
        android:id="@+id/itv_profile"
        android:layout_below="@id/iv_personal_banner"
        v7ns:item_name="@string/fragment_personal_account"
        v7ns:item_src="@drawable/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.zmychou.paces.customview.MoreItemView
        android:background="@color/colorGrayDark"
        android:layout_marginTop="5dp"
        android:id="@+id/itv_settings"
        v7ns:text="@string/fragment_personal_settings"
        v7ns:src="@drawable/setup"
        android:layout_below="@id/itv_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <com.zmychou.paces.customview.MoreItemView
        android:background="@color/colorGrayDark"
        android:layout_marginTop="5dp"
        android:id="@+id/miv_fragment_personal_feedback"
        v7ns:text="@string/fragment_personal_feedback"
        v7ns:src="@drawable/editor"
        android:layout_below="@id/itv_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.zmychou.paces.customview.MoreItemView
        android:id="@+id/miv_fragment_personal_about"
        android:background="@color/colorGrayDark"
        android:layout_marginTop="5dp"
        v7ns:src="@drawable/info"
        v7ns:text="@string/fragment_personal_about"
        android:layout_below="@id/miv_fragment_personal_feedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.zmychou.paces.customview.MoreItemView
        android:id="@+id/miv_fragment_personal_change_password"
        android:background="@color/colorGrayDark"
        android:layout_marginTop="5dp"
        v7ns:src="@drawable/info"
        v7ns:text="@string/change_password_activity_title"
        android:layout_below="@id/miv_fragment_personal_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</RelativeLayout>
