<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zmychou.paces.login.ChangePasswordActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_activity_change_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@mipmap/left"
        android:background="@color/colorGrayDark"
        app:title="@string/change_password_activity_title"
        />


    <EditText
        android:background="@drawable/two_line"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_height="50dp"
        android:id="@+id/et_change_password_current"
        android:inputType="textPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/change_password_activity_current_pwd"

        android:maxLines="1"
        android:layout_width="match_parent"
        />
    <EditText
        android:background="@drawable/two_line"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_height="50dp"
        android:hint="@string/change_password_activity_new"
        android:id="@+id/et_change_password_new"
        android:inputType="textPassword"

        android:maxLines="1"
        android:layout_width="match_parent"
        />
    <EditText
        android:background="@drawable/two_line"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_height="50dp"
        android:hint="@string/change_password_activity_new_confirm"
        android:id="@+id/et_change_password_new_check"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_width="match_parent"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <EditText
        android:id="@+id/et_change_password_code"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:hint="@string/change_password_activity_code"
        android:layout_weight="2"
        android:background="@drawable/two_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content" />
        <Button
            android:id="@+id/btn_change_password_commit"
            android:enabled="false"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:background="@drawable/btn_rectangle"
            android:text="@string/change_password_activity_change"
            android:layout_height="wrap_content" />
        </LinearLayout>

    <TextView
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textColor="@color/colorRedLight"
        android:textSize="18sp"
        android:id="@+id/tv_change_password_activity_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
