<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zmychou.paces.login.LoginActivity">

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/et_login_password"
        android:layout_below="@id/et_login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <CheckBox
        android:id="@+id/cb_login_auto_login"
        android:layout_below="@id/et_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:checked="true"
        android:text="@string/auto_login_next_time"/>

    <Button
        android:id="@+id/btn_login_confirm"
        android:layout_below="@id/cb_login_auto_login"
        android:text="@string/login_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/btn_signup"
        android:layout_below="@id/btn_login_confirm"
        android:text="@string/login_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
</RelativeLayout>
