<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pedometer.PedometerActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/tb_activity_pedometer_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        toolbar:navigationIcon="@mipmap/left"
        toolbar:title="@string/pedometer_activity_title"
        />

    <TextView
        android:id="@+id/tv_pedometer_activity_anchor"
        android:layout_centerHorizontal="true"
        android:layout_width="150dp"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedometer_activity_today"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textSize="25sp"
        android:id="@+id/tv_pedometer_activity_date"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tb_activity_pedometer_toolbar"
        />

    <com.zmychou.paces.customview.StepCountView
        android:layout_below="@id/tv_pedometer_activity_date"
        android:id="@+id/tv_pedestrian_steps"
        android:layout_width="match_parent"
        android:text="0"
        android:layout_height="200dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedometer_activity_has_walk"
        android:layout_alignTop="@id/tv_pedestrian_steps"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:textSize="20sp"
        android:textColor="@color/colorOrangeLight"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedometer_activity_daily_target"
        android:layout_alignBottom="@id/tv_pedestrian_steps"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="55dp"
        android:textColor="@color/colorOrangeLight"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="0.0"
        android:textColor="@color/colorOrangeLight"
        android:textSize="25sp"
        android:layout_alignRight="@id/tv_pedometer_activity_anchor"
        android:id="@+id/tv_pedometer_activity_distance"
        android:layout_below="@id/tv_pedestrian_steps"
        android:layout_marginRight="100dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedometer_activity_distance"
        android:textSize="20sp"
        android:id="@+id/tv_pedometer_activity_distance_label"
        android:layout_below="@id/tv_pedometer_activity_distance"
        android:layout_alignRight="@id/tv_pedometer_activity_distance"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="00:00:00"
        android:textColor="@color/colorOrangeLight"
        android:textSize="25sp"
        android:layout_alignLeft="@id/tv_pedometer_activity_anchor"
        android:id="@+id/tv_pedometer_activity_duration"
        android:layout_below="@id/tv_pedestrian_steps"
        android:layout_marginLeft="100dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pedometer_activity_duration"
        android:textSize="20sp"
        android:layout_alignParentRight="true"
        android:id="@+id/tv_pedometer_activity_duration_label"
        android:layout_below="@id/tv_pedometer_activity_duration"
        android:layout_alignLeft="@id/tv_pedometer_activity_duration"
        />
</RelativeLayout>
